--- a/SASS/components/mobil-version/_advantages-mobile.scss
+++ b/SASS/components/mobil-version/_advantages-mobile.scss
@@ -5,24 +5,26 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    // margin: -15px;
+    margin: -15px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
     // margin: -15px;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
   & li {
-    @media screen and (min-width: 480px) {
-    }
     @media screen and (min-width: 768px) {
       width: calc((100% - 60px) / 2);
-      // margin: 15px;
+      margin: 15px;
     }
     @media screen and (min-width: 1200px) {
       width: calc((100% - 120px) / 4);
       // margin: 15px;
     }
+    // &:nth-child(2n) {
+    //   @media screen and (max-width: 1200px) {
+    //     margin-right: 0px;
+    //   }
   }
   &-heading {
     margin-top: 0px;
@@ -93,19 +95,13 @@
     justify-content: center;
     background-color: $secondary-background-color;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (min-width: 481px) {
       margin-right: 0px;
     }
 
-    @media screen and (max-width: 768px) {
-      margin-right: 30px;
+    &-element:last-child {
+      margin-right: 0px;
     }
-    @media screen and (max-width: 1200px) {
-      margin-right: 30px;
-    }
-  }
-  &-element:last-child {
-    margin-right: 0px;
   }
 }
 
@@ -113,7 +109,17 @@
   display: block;
 }
 .examples {
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1199px) {
     display: none;
   }
 }
+// .advantages-list {
+//   @media screen and (max-width: 1199px) {
+//     margin: -15px;
+//   }
+//   li {
+//     @media screen and (max-width: 1199px) {
+//       margin: 15px;
+//     }
+//   }
+// }
