--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -12,28 +12,26 @@
 }
 .client {
   display: flex;
-  justify-content: center;
+
+  justify-content: space-between;
   // height: 90px;
-  @media screen and (max-width: 768px) {
-    width: calc();
+  @media screen and (max-width: 1199px) {
+    margin: -15px;
+  }
+  @media screen and (max-width: 767px) {
     flex-wrap: wrap;
     flex-basis: 50%;
-    justify-content: space-evenly;
   }
   @media screen and (min-width: 480px) {
-    width: calc();
     flex-wrap: wrap;
     flex-basis: 50%;
-    justify-content: space-evenly;
   }
   @media screen and (min-width: 768px) {
     flex-wrap: wrap;
     flex-basis: 33.3333%;
-    justify-content: space-evenly;
   }
   @media screen and (min-width: 1200px) {
     flex-basis: 100%;
-    justify-content: space-evenly;
   }
 
   &-section {
@@ -49,6 +47,11 @@
 }
 
 .element-client {
+  @media screen and (max-width: 1199px) {
+    margin: 15px;
+  }
+  @media screen and (min-width: 768px) {
+  }
   & a {
     display: flex;
     width: 170px;
@@ -77,6 +80,8 @@
   }
 
   &:last-child {
-    margin-right: 0px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 0px;
+    }
   }
 }
