--- a/SASS/components/mobil-version/_footer-mobile.scss
+++ b/SASS/components/mobil-version/_footer-mobile.scss
@@ -4,11 +4,10 @@
   color: $white-color;
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-left: 15px;
-  padding-right: 15px;
+
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+  justify-content: space-evenly;
 
   & .container {
     @media screen and (max-width: 480px) {
@@ -40,34 +39,43 @@
     letter-spacing: 0.03em;
   }
   .button {
-    margin-top: 34px;
     display: flex;
+    margin-top: 36px;
+    border: none;
+
+    @media screen and (max-width: 1199px) {
+      margin-top: 20px;
+      margin-right: auto;
+      margin-left: auto;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-left: 20px;
+    }
   }
 }
 .adress-container {
-  @media screen and (max-width: 480px) {
-  }
-  @media screen and (min-width: 768px) {
-    margin-right: 165px;
-  }
+  text-align: center;
+  // @media screen and (max-width: 480px) {
+  // }
+  // @media screen and (min-width: 768px) {
+  //   margin-right: 165px;
+  // }
   @media screen and (min-width: 1200px) {
-    margin-right: 140px;
+    margin-right: 69px;
+    text-align: start;
   }
 }
 .sociallink-container {
-  @media screen and (max-width: 768px) {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  @media screen and (min-width: 768px) {
-    margin-right: 100px;
+  @media screen and (max-width: 1199px) {
+    text-align: center;
   }
   @media screen and (min-width: 1200px) {
-    margin-right: 100px;
+    margin-right: 94px;
   }
 }
 
 .contacts {
+  margin-top: 20px;
   display: inline-block;
   font-style: normal;
   font-weight: normal;
@@ -87,9 +95,9 @@
     color: $footer-text-color;
   }
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1199px) {
     display: block;
-    margin-top: 20px;
+
     margin-bottom: 60px;
   }
 }
@@ -102,7 +110,7 @@
   border-radius: 50%;
   justify-content: center;
   align-items: center;
-  margin-right: 10px;
+  // margin-right: 10px;
 
   &:hover {
     background-color: $accent-blue-color;
@@ -113,38 +121,56 @@
 }
 
 .sociallink-end {
+  margin-top: 20px;
   display: flex;
-  color: rgba(255, 255, 255, 0.1);
-  margin-top: 16px;
+  color: rgba(2, 1, 1, 0.1);
+  // margin-top: 16px;
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 60px;
+    align-items: center;
+    justify-content: center;
+  }
 }
-
+.sociallink-end-element:not(:last-child) {
+  margin-right: 10px;
+}
 .mailing-container {
   display: flex;
   align-items: center;
+  justify-content: center;
+  @media screen and (min-width: 1200px) {
+    margin-top: -30px;
+  }
 }
 .mailing-form {
+  text-align: center;
   @media screen and (min-width: 1200px) {
     display: flex;
+    text-align: start;
   }
 }
 .email {
-  width: 270px;
+  width: 100%;
   height: 50px;
   border-radius: 4px;
   border: 1px solid $footer-text-color;
-  margin-right: 10px;
   padding-left: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-  margin-top: 16px;
+  margin-top: 20px;
   background-color: #2f303a;
   color: $footer-text-color;
-  @media screen and (min-width: 768px) {
+  text-align: start;
+  @media screen and (min-width: 0px) {
     display: block;
-    text-align: center;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-right: 0px;
+    width: 450px;
   }
   @media screen and (min-width: 1200px) {
     display: inline-block;
+    // width: 358px;
   }
 }
 .plane {
@@ -155,5 +181,8 @@
 .additional-container {
   @media screen and (min-width: 768px) {
     display: flex;
+    justify-content: space-evenly;
+  }
+  @media screen and (min-width: 1200px) {
   }
 }
