--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -1,7 +1,7 @@
 .container {
   // width: 1200px;
-  // margin-right: auto;
-  // margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 
