--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,8 @@ ul {
 }
 
 .container {
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -342,6 +344,7 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    margin: -15px;
   }
 }
 
@@ -350,15 +353,16 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
 }
 
 @media screen and (min-width: 768px) {
   .advantages li {
     width: calc((100% - 60px) / 2);
+    margin: 15px;
   }
 }
 
@@ -462,25 +466,13 @@ ul {
   background-color: #f5f4fa;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 481px) {
   .advantages-element {
     margin-right: 0px;
   }
 }
 
-@media screen and (max-width: 768px) {
-  .advantages-element {
-    margin-right: 30px;
-  }
-}
-
-@media screen and (max-width: 1200px) {
-  .advantages-element {
-    margin-right: 30px;
-  }
-}
-
-.advantages-element:last-child {
+.advantages-element-element:last-child {
   margin-right: 0px;
 }
 
@@ -488,7 +480,7 @@ ul {
   display: block;
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .examples {
     display: none;
   }
@@ -630,7 +622,7 @@ h2 {
 
 @media screen and (min-width: 1200px) {
   .team-list-person {
-    width: calc((100%-105px) / 4);
+    width: calc((100%-120px) / 4);
     margin: 15px;
   }
 }
@@ -639,10 +631,6 @@ h2 {
   .team-list-person:not(:last-child) {
     margin-bottom: 30px;
   }
-}
-
-.team-list-person:last-child {
-  margin-right: 0;
 }
 
 .team-list-person:last-child {
@@ -759,34 +747,32 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1199px) {
   .client {
-    width: calc();
+    margin: -15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .client {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
   }
 }
 
 @media screen and (min-width: 480px) {
   .client {
-    width: calc();
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
   }
 }
 
@@ -796,9 +782,6 @@ h2 {
         flex-wrap: wrap;
     -ms-flex-preferred-size: 33.3333%;
         flex-basis: 33.3333%;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
   }
 }
 
@@ -806,9 +789,6 @@ h2 {
   .client {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
   }
 }
 
@@ -823,6 +803,12 @@ h2 {
   .client-section {
     padding-top: 94px;
     padding-bottom: 94px;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .element-client {
+    margin: 15px;
   }
 }
 
@@ -870,8 +856,10 @@ h2 {
   }
 }
 
-.element-client:last-child {
-  margin-right: 0px;
+@media screen and (min-width: 1200px) {
+  .element-client:last-child {
+    margin-right: 0px;
+  }
 }
 
 .footer {
@@ -880,11 +868,11 @@ h2 {
   color: #ffffff;
   padding-top: 60px;
   padding-bottom: 60px;
-  padding-left: 15px;
-  padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  text-align: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
 @media screen and (max-width: 480px) {
@@ -923,44 +911,52 @@ h2 {
 }
 
 .footer .button {
-  margin-top: 34px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin-top: 36px;
+  border: none;
 }
 
-@media screen and (min-width: 768px) {
-  .adress-container {
-    margin-right: 165px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .adress-container {
-    margin-right: 140px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .sociallink-container {
-    margin-left: auto;
+@media screen and (max-width: 1199px) {
+  .footer .button {
+    margin-top: 20px;
     margin-right: auto;
+    margin-left: auto;
   }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1200px) {
+  .footer .button {
+    margin-left: 20px;
+  }
+}
+
+.adress-container {
+  text-align: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .adress-container {
+    margin-right: 69px;
+    text-align: start;
+  }
+}
+
+@media screen and (max-width: 1199px) {
   .sociallink-container {
-    margin-right: 100px;
+    text-align: center;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .sociallink-container {
-    margin-right: 100px;
+    margin-right: 94px;
   }
 }
 
 .contacts {
+  margin-top: 20px;
   display: inline-block;
   font-style: normal;
   font-weight: normal;
@@ -981,10 +977,9 @@ h2 {
   color: rgba(255, 255, 255, 0.4);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1199px) {
   .contacts {
     display: block;
-    margin-top: 20px;
     margin-bottom: 60px;
   }
 }
@@ -1003,7 +998,6 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-right: 10px;
 }
 
 .link-end:hover {
@@ -1015,11 +1009,27 @@ h2 {
 }
 
 .sociallink-end {
+  margin-top: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: rgba(255, 255, 255, 0.1);
-  margin-top: 16px;
+  color: rgba(2, 1, 1, 0.1);
+}
+
+@media screen and (max-width: 1199px) {
+  .sociallink-end {
+    margin-bottom: 60px;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.sociallink-end-element:not(:last-child) {
+  margin-right: 10px;
 }
 
 .mailing-container {
@@ -1029,6 +1039,19 @@ h2 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media screen and (min-width: 1200px) {
+  .mailing-container {
+    margin-top: -30px;
+  }
+}
+
+.mailing-form {
+  text-align: center;
 }
 
 @media screen and (min-width: 1200px) {
@@ -1036,27 +1059,34 @@ h2 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    text-align: start;
   }
 }
 
 .email {
-  width: 270px;
+  width: 100%;
   height: 50px;
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.4);
-  margin-right: 10px;
   padding-left: 10px;
   padding-top: 20px;
   padding-bottom: 20px;
-  margin-top: 16px;
+  margin-top: 20px;
   background-color: #2f303a;
   color: rgba(255, 255, 255, 0.4);
+  text-align: start;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 0px) {
   .email {
     display: block;
-    text-align: center;
+  }
+}
+
+@media screen and (max-width: 1199px) {
+  .email {
+    margin-right: 0px;
+    width: 450px;
   }
 }
 
@@ -1077,6 +1107,9 @@ h2 {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
 }
 /*# sourceMappingURL=main.css.map */
