--- a/SASS/components/mobil-version/_ header-mobile.scss
+++ b/SASS/components/mobil-version/_ header-mobile.scss
@@ -97,7 +97,7 @@
   }
 }
 .adress-nav {
-  @media screen and (max-width: 768px) {
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-direction: column;
     padding: 30px 0px;
@@ -107,30 +107,30 @@
     flex-direction: column;
     padding: 30px 0px;
   }
+}
 
-  & a {
-    font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.02em;
-    color: $grey-text-color;
-    @media screen and (min-width: 768px) {
-      text-align: start;
-    }
-    @media screen and (min-width: 1200px) {
-      margin-top: 30px;
-    }
+.adress-nav a {
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.02em;
+  color: $grey-text-color;
+  @media screen and (min-width: 768px) {
+    text-align: start;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-top: 30px;
   }
 
   & :hover,
   & :focus {
     color: $accent-blue-color;
-
-    @media screen and (min-width: 1200px) {
-      display: inline-flex;
-    }
   }
 }
-
+.adress-nav li {
+  @media screen and (min-width: 768px) {
+    text-align: center;
+  }
+}
 .current {
   color: $accent-blue-color;
 
@@ -162,8 +162,6 @@
     margin-top: 30px;
     margin-top: auto;
     margin-bottom: auto;
-  }
-  @media screen and (min-width: 1200px) {
     margin-right: 15px;
     margin-left: 15px;
   }
